add solution Syntax task 1506